<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageView
            android:id="@+id/imageIconLeft"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/status"
            android:src="@drawable/ic_default"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/task_name"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            app:layout_constraintStart_toEndOf="@id/imageIconLeft"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/imageIconRight"
            app:layout_constraintHorizontal_bias="0"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <TextView
            android:id="@+id/textDeadline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/some_date"
            android:textSize="14sp"
            android:textColor="#888888"
            app:layout_constraintStart_toEndOf="@id/imageIconLeft"
            app:layout_constraintTop_toBottomOf="@id/textTitle"
            app:layout_constraintEnd_toStartOf="@id/imageIconRight"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp" />

        <ImageView
            android:id="@+id/imageIconRight"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/complexity"
            android:src="@drawable/ic_default"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>