<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <!-- Панель кнопок -->
    <LinearLayout
        android:id="@+id/barButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        style="?android:attr/buttonBarStyle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/buttonWorkloadRun"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/workload" />

        <Button
            android:id="@+id/buttonCycleTimeRun"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/cycle_time" />
    </LinearLayout>

    <!-- Контейнер для статистики выполнения -->
    <LinearLayout
        android:id="@+id/cycleTimeInputContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_marginTop="16dp"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/titleTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/titleInputTextView"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:gravity="start"
            android:typeface="monospace"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/putNewData"
            android:layout_width="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:textSize="16sp"
                android:layout_marginEnd="8dp"/>

            <Spinner
                android:id="@+id/categorySpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:spinnerMode="dropdown" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputNumbers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="3"
                android:minHeight="48dp"
                android:padding="8dp"
                android:hint="@string/help_string_input_percentiles" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonCalculateCycle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calc"
            android:backgroundTint="@color/purple_500"
            android:layout_marginTop="8dp" />
    </LinearLayout>

    <!-- Шиммер -->
    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmerLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/cycleTimeInputContainer"
        app:layout_constraintBottom_toTopOf="@id/buttonReturn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shimmer_placeholder"
            android:padding="16dp" />
    </com.facebook.shimmer.ShimmerFrameLayout>

    <!-- Текст заголовка -->
    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:textSize="19sp"
        android:gravity="center"
        android:typeface="monospace"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/workload_title"
        app:layout_constraintTop_toBottomOf="@id/barButtons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.example.view.graph.WorkloadGraphView
        android:id="@+id/workloadGraphView"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:visibility="gone"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/resTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.example.view.graph.CycleTimeGraphView
        android:id="@+id/cycleTimeGraphView"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="300dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/resTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Текст результата -->
    <TextView
        android:id="@+id/resTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:textSize="18sp"
        android:gravity="start"
        android:typeface="monospace"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/some_res"
        app:layout_constraintTop_toBottomOf="@id/cycleTimeInputContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Текст ошибки -->
    <TextView
        android:id="@+id/errorTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="gone"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/errLoad"
        app:layout_constraintTop_toBottomOf="@id/cycleTimeInputContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Кнопка назад -->
    <Button
        android:id="@+id/buttonReturn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:text="@string/return_str"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:fontFamily="sans-serif-medium"
        android:backgroundTint="@color/purple_700"
        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>